// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a series title properly 1`] = `
.c1 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 42px;
  line-height: 50px;
  margin-bottom: 8px;
}

.c0 {
  color: black;
  text-align: center;
}

.c0 .c2 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c2 img {
  margin-left: auto;
  margin-right: auto;
}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 60px;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    font-size: 100px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    line-height: 66px;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    line-height: 104px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    margin-bottom: 16px;
  }
}

@media (max-width:900px) {
  .c0 .c2 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
  color="black"
>
  <h1
    className="c1"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize={
      Array [
        "42px",
        "60px",
        "100px",
      ]
    }
    style={Object {}}
  >
    The Future of Art
  </h1>
</div>
`;

exports[`renders a series with children properly 1`] = `
.c1 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 42px;
  line-height: 50px;
  margin-bottom: 8px;
}

.c0 {
  color: black;
  text-align: center;
}

.c0 .c2 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c2 img {
  margin-left: auto;
  margin-right: auto;
}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 60px;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    font-size: 100px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    line-height: 66px;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    line-height: 104px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    margin-bottom: 16px;
  }
}

@media (max-width:900px) {
  .c0 .c2 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
  color="black"
>
  <h1
    className="c1"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize={
      Array [
        "42px",
        "60px",
        "100px",
      ]
    }
    style={Object {}}
  >
    <div>
      Child 
      title
    </div>
  </h1>
</div>
`;

exports[`renders a sponsored series title properly 1`] = `
.c1 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 42px;
  line-height: 50px;
  margin-bottom: 8px;
}

.c2 {
  display: block;
}

.c5 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c3 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c0 {
  color: black;
  text-align: center;
}

.c0 .c4 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c4 img {
  margin-left: auto;
  margin-right: auto;
}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 60px;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    font-size: 100px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    line-height: 66px;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    line-height: 104px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    margin-bottom: 16px;
  }
}

@media (max-width:720px) {
  .c3 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:900px) {
  .c0 .c4 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
  color="black"
>
  <h1
    className="c1"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize={
      Array [
        "42px",
        "60px",
        "100px",
      ]
    }
    style={Object {}}
  >
    The Future of Art
  </h1>
  <div
    className="PartnerBlock c2"
  >
    <div
      className="c3"
    >
      Presented in Partnership with
    </div>
    <div
      className="c4 c5"
    >
      <a
        href="http://artsy.net"
        onClick={[Function]}
        target="_blank"
      >
        <img
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
        />
      </a>
    </div>
  </div>
</div>
`;
